--- a/FuchsiaLauncherCon/FuchsiaLauncherCon.vcxproj
+++ b/FuchsiaLauncherCon/FuchsiaLauncherCon.vcxproj
@@ -153,6 +153,7 @@
   <ItemGroup>
     <ClCompile Include="DLLLoader.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Util.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Command.h" />
@@ -170,8 +171,10 @@
     <ClInclude Include="ProgressBar.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="Settings.h" />
+    <ClInclude Include="Streams.h" />
     <ClInclude Include="Time.h" />
     <ClInclude Include="CommandUpdateVersion.h" />
+    <ClInclude Include="Util.h" />
     <ClInclude Include="VersionData.h" />
   </ItemGroup>
   <ItemGroup>
