--- a/FuchsiaLauncherCon/FuchsiaLauncherCon.vcxproj.filters
+++ b/FuchsiaLauncherCon/FuchsiaLauncherCon.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="DLLLoader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Util.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CommandPrintData.h">
@@ -79,6 +82,12 @@
     </ClInclude>
     <ClInclude Include="CommandWriteVersion.h">
       <Filter>Header Files\Commands</Filter>
+    </ClInclude>
+    <ClInclude Include="Util.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Streams.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
