--- a/FuchsiaLauncherCon/FuchsiaLauncherCon.vcxproj
+++ b/FuchsiaLauncherCon/FuchsiaLauncherCon.vcxproj
@@ -153,6 +153,7 @@
   <ItemGroup>
     <ClCompile Include="DLLLoader.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Progressbar.cpp" />
     <ClCompile Include="Util.cpp" />
   </ItemGroup>
   <ItemGroup>
