--- a/FuchsiaLauncherCon/FuchsiaLauncherCon.vcxproj
+++ b/FuchsiaLauncherCon/FuchsiaLauncherCon.vcxproj
@@ -155,6 +155,7 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Progressbar.cpp" />
     <ClCompile Include="Util.cpp" />
+    <ClCompile Include="WinRegistry.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Command.h" />
@@ -177,6 +178,7 @@
     <ClInclude Include="CommandUpdateVersion.h" />
     <ClInclude Include="Util.h" />
     <ClInclude Include="VersionData.h" />
+    <ClInclude Include="WinRegistry.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="resource.rc" />
