--- a/FuchsiaLauncherCon/FuchsiaLauncherCon.vcxproj.filters
+++ b/FuchsiaLauncherCon/FuchsiaLauncherCon.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="WinRegistry.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="VersionData.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CommandPrintData.h">
